vercel build again

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build:wasm": "cd wasm-speedtest-wasm && wasm-pack build --target web",
-    "build": "npm run build:wasm && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
